--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Proudly coded in the birthplace of the Olympic Games" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qeB-WQ-QHp">
-                                <rect key="frame" x="46" y="538" width="508" height="42"/>
+                                <rect key="frame" x="16" y="538" width="568" height="62"/>
                                 <color key="backgroundColor" red="0.9828287939" green="0.98607094009999996" blue="1" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="0.32544191919999998" green="0.32544191919999998" blue="0.32544191919999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -87,18 +87,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="qeB-WQ-QHp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="1tl-Yf-rqJ"/>
+                            <constraint firstItem="qeB-WQ-QHp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1tl-Yf-rqJ"/>
                             <constraint firstItem="kbN-FI-1tu" firstAttribute="centerX" secondItem="mTF-N5-sMK" secondAttribute="centerX" id="811-G5-JgV"/>
                             <constraint firstItem="qeB-WQ-QHp" firstAttribute="top" secondItem="dB1-lR-aEY" secondAttribute="bottom" constant="-62" id="BfD-DL-ja8"/>
                             <constraint firstItem="kbN-FI-1tu" firstAttribute="centerX" secondItem="dB1-lR-aEY" secondAttribute="centerX" constant="0.5" id="Diw-HG-iZP"/>
                             <constraint firstItem="kbN-FI-1tu" firstAttribute="top" secondItem="mTF-N5-sMK" secondAttribute="bottom" constant="38" id="GqL-SD-p3t"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="qeB-WQ-QHp" secondAttribute="trailing" constant="30" id="POH-j2-ir3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qeB-WQ-QHp" secondAttribute="trailing" id="POH-j2-ir3"/>
                             <constraint firstItem="yLJ-VG-gcW" firstAttribute="top" secondItem="whE-BS-ZcV" secondAttribute="bottom" constant="8" id="T5l-nn-oGQ"/>
                             <constraint firstItem="whE-BS-ZcV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="140" id="U0V-yA-wJ6"/>
                             <constraint firstItem="yLJ-VG-gcW" firstAttribute="leading" secondItem="whE-BS-ZcV" secondAttribute="leading" id="XO8-Ca-Q1v"/>
                             <constraint firstAttribute="centerX" secondItem="mTF-N5-sMK" secondAttribute="centerX" id="YNQ-8G-1LV"/>
                             <constraint firstItem="2oW-RA-dZZ" firstAttribute="top" secondItem="kbN-FI-1tu" secondAttribute="bottom" constant="8" id="Zxh-av-VkB"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qeB-WQ-QHp" secondAttribute="bottom" constant="20" id="fKg-0O-2yR"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qeB-WQ-QHp" secondAttribute="bottom" id="fKg-0O-2yR"/>
                             <constraint firstItem="whE-BS-ZcV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="g1w-9d-uLP"/>
                             <constraint firstAttribute="centerY" secondItem="mTF-N5-sMK" secondAttribute="centerY" constant="49" id="hBG-Hr-2gT"/>
                             <constraint firstItem="dB1-lR-aEY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jd7-j2-Ucg"/>
@@ -119,7 +119,7 @@
             <objects>
                 <tableViewController id="rhg-VY-n0v" userLabel="ProfileMainView" customClass="TRFProfileViewController" customModule="trafie" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="interactive" dataMode="static" style="grouped" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="jJK-kj-XcJ">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
@@ -211,28 +211,27 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dpb-5Y-8HI" id="WGt-9S-VRH">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" placeholder="About:" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vth-eg-QqR">
-                                                    <rect key="frame" x="8" y="8" width="752" height="115.5"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" keyboardDismissMode="onDrag" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="ZBN-Q5-cF1">
+                                                    <rect key="frame" x="8" y="7" width="752" height="115.5"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                    <connections>
-                                                        <action selector="aboutFieldTyping:" destination="rhg-VY-n0v" eventType="editingChanged" id="KKp-Pn-M6y"/>
-                                                    </connections>
-                                                </textField>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="counter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0J-9n-ZoY">
-                                                    <rect key="frame" x="701" y="102" width="58.5" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" enablesReturnKeyAutomatically="YES"/>
+                                                    <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                                </textView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="400" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0J-9n-ZoY">
+                                                    <rect key="frame" x="736" y="106" width="24" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.61970604259999995" green="0.6596157118" blue="0.71225931190000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="vth-eg-QqR" firstAttribute="trailing" secondItem="WGt-9S-VRH" secondAttribute="trailingMargin" id="7ai-ts-YHT"/>
-                                                <constraint firstItem="vth-eg-QqR" firstAttribute="top" secondItem="WGt-9S-VRH" secondAttribute="topMargin" id="Jvd-hl-yxn"/>
+                                                <constraint firstItem="ZBN-Q5-cF1" firstAttribute="bottom" secondItem="WGt-9S-VRH" secondAttribute="bottomMargin" id="1Pb-pk-YbQ"/>
+                                                <constraint firstItem="ZBN-Q5-cF1" firstAttribute="trailing" secondItem="WGt-9S-VRH" secondAttribute="trailingMargin" id="5FU-5z-deq"/>
+                                                <constraint firstItem="ZBN-Q5-cF1" firstAttribute="leading" secondItem="WGt-9S-VRH" secondAttribute="leadingMargin" id="AR0-aS-nzD"/>
                                                 <constraint firstItem="I0J-9n-ZoY" firstAttribute="trailing" secondItem="WGt-9S-VRH" secondAttribute="trailingMargin" id="T10-gq-AOc"/>
+                                                <constraint firstItem="ZBN-Q5-cF1" firstAttribute="top" secondItem="WGt-9S-VRH" secondAttribute="topMargin" id="do3-Zg-3Hd"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="I0J-9n-ZoY" secondAttribute="bottom" constant="0.5" id="g5A-mT-nsh"/>
-                                                <constraint firstItem="vth-eg-QqR" firstAttribute="leading" secondItem="WGt-9S-VRH" secondAttribute="leadingMargin" id="hAl-X6-kz0"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="vth-eg-QqR" secondAttribute="bottom" id="vQO-lm-eyr"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -393,7 +392,7 @@
                     <navigationItem key="navigationItem" title="Profile" id="eRL-36-GGO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
-                        <outlet property="aboutField" destination="vth-eg-QqR" id="hdQ-M9-VOs"/>
+                        <outlet property="aboutField" destination="ZBN-Q5-cF1" id="jT9-0L-Fnf"/>
                         <outlet property="aboutFieldLetterCounter" destination="I0J-9n-ZoY" id="CjE-Zv-Qzr"/>
                         <outlet property="birthdayInputField" destination="GjP-Wv-Ltf" id="S4I-Ws-wLG"/>
                         <outlet property="countriesInputField" destination="dZ8-I5-2uv" id="ExY-ss-ZHJ"/>
