--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,9 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="polevault.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="dB1-lR-aEY">
-                                <rect key="frame" x="0.0" y="0.0" width="640" height="640"/>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CPV-qA-cPa">
                                 <rect key="frame" x="0.0" y="282" width="600" height="318"/>
                                 <subviews>
@@ -127,7 +123,7 @@
                                 </variation>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Proudly coded in the birthplace of the Olympic Games" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qeB-WQ-QHp">
-                                <rect key="frame" x="147" y="571" width="306" height="29"/>
+                                <rect key="frame" x="147" y="571" width="305.5" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="5K5-Qz-nqs"/>
                                 </constraints>
@@ -135,27 +131,25 @@
                                 <color key="textColor" red="0.32544191919999998" green="0.32544191919999998" blue="0.32544191919999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="trafie" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="aSB-Ir-wz7">
+                                <rect key="frame" x="80" y="20" width="441" height="43"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="43"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.80784313730000001" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="CPV-qA-cPa" secondAttribute="trailing" constant="-16" id="2mY-FU-nyq"/>
                             <constraint firstAttribute="centerX" secondItem="qeB-WQ-QHp" secondAttribute="centerX" id="3AG-li-JeF"/>
                             <constraint firstItem="CPV-qA-cPa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="262" id="3ov-3i-7NP"/>
-                            <constraint firstItem="dB1-lR-aEY" firstAttribute="leading" secondItem="CPV-qA-cPa" secondAttribute="leading" id="5HM-qA-kVk"/>
+                            <constraint firstAttribute="centerX" secondItem="aSB-Ir-wz7" secondAttribute="centerX" constant="-0.5" id="Hyz-R5-jmm"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="CPV-qA-cPa" secondAttribute="bottom" id="Kt9-SN-SW4"/>
-                            <constraint firstItem="dB1-lR-aEY" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="RsN-XK-SvN"/>
                             <constraint firstItem="qeB-WQ-QHp" firstAttribute="top" secondItem="2oW-RA-dZZ" secondAttribute="bottom" constant="8" id="Soe-lE-Ocg"/>
                             <constraint firstItem="CPV-qA-cPa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="fvH-4p-mI6"/>
-                            <constraint firstItem="CPV-qA-cPa" firstAttribute="top" secondItem="dB1-lR-aEY" secondAttribute="bottom" constant="-318" id="gIJ-El-xyQ"/>
+                            <constraint firstItem="aSB-Ir-wz7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hiy-eH-i8a"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qeB-WQ-QHp" secondAttribute="bottom" id="mct-Jy-Nt2"/>
-                            <constraint firstItem="dB1-lR-aEY" firstAttribute="width" secondItem="CPV-qA-cPa" secondAttribute="height" multiplier="100:53" id="nwo-k4-XQp"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="nwo-k4-XQp"/>
-                                <exclude reference="gIJ-El-xyQ"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -701,7 +695,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hE0-qd-iP3">
-                                                    <rect key="frame" x="224" y="2" width="320" height="162"/>
+                                                    <rect key="frame" x="8" y="2" width="752" height="162"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="162" id="5aX-85-Gq6"/>
                                                         <constraint firstAttribute="height" constant="30" id="cTL-7A-Sqg"/>
@@ -715,6 +709,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="centerY" secondItem="hE0-qd-iP3" secondAttribute="centerY" constant="-0.25" id="a8Z-rt-Io3"/>
+                                                <constraint firstItem="hE0-qd-iP3" firstAttribute="trailing" secondItem="c9b-xQ-6db" secondAttribute="trailingMargin" id="jrY-Mg-Uug"/>
+                                                <constraint firstItem="hE0-qd-iP3" firstAttribute="leading" secondItem="c9b-xQ-6db" secondAttribute="leadingMargin" id="oQm-5q-4A3"/>
                                                 <constraint firstAttribute="centerX" secondItem="hE0-qd-iP3" secondAttribute="centerX" id="qQr-0I-hTv"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -1058,10 +1054,9 @@
     </scenes>
     <resources>
         <image name="highjuper_2.jpg" width="1200" height="967"/>
-        <image name="polevault.jpeg" width="640" height="640"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="L3j-Ju-IP5"/>
-        <segue reference="116-fA-Bze"/>
+        <segue reference="A1u-CP-W9w"/>
     </inferredMetricsTieBreakers>
 </document>
